--- a/app/src/main/res/drawable/nav_bar_background.xml
+++ b/app/src/main/res/drawable/nav_bar_background.xml
@@ -2,7 +2,8 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="@color/white"
-        android:endColor="@color/white"></gradient>
-<corners android:radius="120dp"></corners>
+    <gradient
+        android:startColor="#F44336"
+        android:endColor="#03A9F4" />
+    <corners android:radius="120dp" />
 </shape>
