fixed bottom navigation bar item

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,9 @@
         android:layout_height="@dimen/size_58"
         android:paddingTop="@dimen/size_6"
         app:itemIconSize="@dimen/size_28"
-        app:itemIconTint="#5C8DB3"
+        app:itemIconTint="@color/white"
         android:background="@drawable/nav_bar_background"
-        app:itemRippleColor="#35709E"
+        app:itemRippleColor="@color/white"
         app:menu="@menu/menu"
         android:layout_marginLeft="@dimen/size_100"
         app:navGraph="@navigation/navigation"
