added full screen

--- a/app/src/main/res/drawable/ic_loading.xml
+++ b/app/src/main/res/drawable/ic_loading.xml
@@ -1,5 +1,6 @@
 <vector android:height="96dp" android:viewportHeight="96"
-    android:viewportWidth="96" android:width="96dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:viewportWidth="96" android:width="96dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#cccccf"
         android:pathData="M36.06,28.92L36.06,32.18"
         android:strokeColor="#e7e7e7" android:strokeLineCap="round" android:strokeWidth="1"/>
