--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey">#7A7979</color>
     <color name="eighty_percent_transparent">#88FFFFFF</color>
     <color name="white">#FFFFFFFF</color>
     <color name="app_background_color">#ffff</color>
