--- a/app/src/main/res/layout/alter_dialogue_layout.xml
+++ b/app/src/main/res/layout/alter_dialogue_layout.xml
@@ -42,27 +42,14 @@
             android:textStyle="normal"
             app:layout_constraintTop_toBottomOf="@+id/settingUpTitle" />
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/loaderAnimation"
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_150"
-            android:layout_marginTop="@dimen/size_10"
             app:layout_constraintTop_toBottomOf="@+id/settingUpDescription"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/processing" />
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/progressAnimation"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_30"
-            android:layout_marginStart="@dimen/size_10"
-            android:layout_marginTop="@dimen/size_10"
-            android:layout_marginEnd="@dimen/size_10"
-            app:layout_constraintTop_toBottomOf="@+id/loaderAnimation"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/progress_line" />
-
+            android:layout_marginTop="@dimen/size_20"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="@dimen/size_10"
+            android:src="@drawable/ic_work_in_progress"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
