--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -1,27 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <androidx.cardview.widget.CardView
-        android:layout_width="@dimen/size_140"
-        android:layout_height="@dimen/size_250"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="@dimen/size_16"
-        android:layout_marginTop="@dimen/size_10"
-        android:layout_marginEnd="@dimen/size_20"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/size_12">
+    android:layout_width="@dimen/size_140"
+    android:layout_height="@dimen/size_250"
+    android:layout_marginStart="@dimen/size_16"
+    android:layout_marginTop="@dimen/size_10"
+    android:layout_marginEnd="@dimen/size_20"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="@dimen/size_12"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <ImageView
             android:id="@+id/homeItemImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             android:contentDescription="@string/wallpaperImage"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/progress"
+            android:layout_width="@dimen/size_40"
+            android:layout_height="@dimen/size_40"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/wallpaper_loading_animation"
+
             />
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
