--- a/app/src/main/res/layout/alter_dialogue_layout.xml
+++ b/app/src/main/res/layout/alter_dialogue_layout.xml
@@ -1,55 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/size_10"
-    android:layout_marginTop="10dp"
-    android:layout_marginEnd="@dimen/size_10"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="@dimen/size_12">
+    android:background="@drawable/dialog_bg"
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
+        android:id="@+id/settingUpTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_10"
-        android:layout_marginEnd="@dimen/size_10"
+        android:layout_marginTop="@dimen/size_26"
+        android:fontFamily="@font/amaranth"
+        android:text="@string/settingUpTitle"
+        android:textColor="@color/black"
+        android:textSize="@dimen/font_22"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/settingUpDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_12"
+        android:layout_marginEnd="@dimen/size_26"
+        android:text="@string/settingUpWallpaper"
+        android:textColor="@color/black"
+        android:textStyle="normal"
+        app:layout_constraintTop_toBottomOf="@+id/settingUpTitle" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size_150"
+        android:layout_marginTop="@dimen/size_20"
         android:layout_marginBottom="@dimen/size_10"
-        android:background="@color/white">
+        android:src="@drawable/ic_work_in_progress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settingUpDescription" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/settingUpTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_26"
-            android:fontFamily="@font/amaranth"
-            android:text="@string/settingUpTitle"
-            android:textColor="@color/black"
-            android:textSize="@dimen/font_22"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/settingUpDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_12"
-            android:layout_marginEnd="@dimen/size_26"
-            android:text="@string/settingUpWallpaper"
-            android:textColor="@color/black"
-            android:textStyle="normal"
-            app:layout_constraintTop_toBottomOf="@+id/settingUpTitle" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_150"
-            app:layout_constraintTop_toBottomOf="@+id/settingUpDescription"
-            android:layout_marginTop="@dimen/size_20"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="@dimen/size_10"
-            android:src="@drawable/ic_work_in_progress"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
