--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,17 +7,9 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.areeb.sekaisheet.ui.Home.Fragment.HomeFragment"
-        android:label="HomeFragment" >
-        <action
-            android:id="@+id/action_homeFragment_to_categoriesFragment"
-            app:destination="@id/categoriesFragment" />
-    </fragment>
+        android:label="HomeFragment" />
     <fragment
         android:id="@+id/categoriesFragment"
         android:name="com.areeb.sekaisheet.ui.Category.Fragment.CategoriesFragment"
-        android:label="CategoriesFragment" >
-        <action
-            android:id="@+id/action_categoriesFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-    </fragment>
+        android:label="CategoriesFragment" />
 </navigation>
