implemented categories item

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -15,5 +15,9 @@
     <fragment
         android:id="@+id/categoriesFragment"
         android:name="com.areeb.sekaisheet.ui.Category.Fragment.CategoriesFragment"
-        android:label="CategoriesFragment" />
+        android:label="CategoriesFragment" >
+        <action
+            android:id="@+id/action_categoriesFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
