--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,17 +37,17 @@
         android:layout_marginHorizontal="@dimen/size_16"
         android:layout_marginTop="@dimen/size_20"
         android:isScrollContainer="true"
-        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/appName"
         app:spanCount="2" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/homeShimmerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/size_40"
-        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/appName">
+
         <include layout="@layout/sekelton" />
     </com.facebook.shimmer.ShimmerFrameLayout>
 
