--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/black"
     tools:context="com.areeb.sekaisheet.ui.search.fragment.SearchFragment">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginTop="@dimen/size_10"
         android:fontFamily="@font/amaranth"
         android:text="@string/search"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/font_24"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
