--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_background_color">
+    android:background="@color/black">
 
     <TextView
         android:id="@+id/appName"
@@ -13,7 +13,7 @@
         android:layout_marginTop="@dimen/size_20"
         android:fontFamily="@font/amaranth"
         android:text="@string/app_name"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/font_32"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
